# AutomatedPatellarCoordinateSystem

./: AnoyCG_1_patella_4k.stl  CMakeLists.txt  README.md  bzj_patella_4k.txt  csv_writer.cpp  csv_writer.h  geometry.cpp  geometry.h  main.cpp  patella_analyzer.cpp  patella_analyzer.h  visualization.cpp  visualization.h  vtk_utils.cpp  vtk_utils.h
sample/: AnoyCG_1_patella_4k.txt  AnoyPD_2_fpatella_4k.stl  AnoyPD_2_patella_4k.txt
